--- a/main/src/views/Main/Main.css
+++ b/main/src/views/Main/Main.css
@@ -5,7 +5,6 @@ main {
 }
 .error-button {
   background-color: #ff854d;
-  border: 1px solid var(--secondary-bg);
   color: var(--secondary-bg);
 }
 
